--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon app.js"
-  },
+  "dev": "nodemon app.js",
+  "start": "node app.js"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
